--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "data": {
-    "trainingPercent": 60
+    "trainingPercent": 90
   },
   "training": {
-    "keywordsCount": 35,
-    "method": "tf"
+    "keywordsCount": 50,
+    "method": "dfratio"
   },
   "knnParams": {
-    "k": 15,
-    "distanceMetric": "euclidean"
+    "k": 5,
+    "distanceMetric": "manhattan"
   },
   "category": "type"
 }
